# ExtendedEssay

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
analysis/: EE.ipynb  cosmopy.py  lambert.py
assets/: solar_system.tm
src/: Body.cpp  Body.h  Lambert.cpp  Lambert.h  Main.cpp  Porkchop.cpp  Porkchop.h  Simulator.cpp  Simulator.h  Vec.cpp  Vec.h
